--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "devDependencies": {
-<<<<<<< HEAD
-    "cypress": "^12.9.0"
-=======
+    "@shelex/cypress-allure-plugin": "^2.40.0",
     "cypress": "^12.9.0",
     "eslint": "^8.38.0",
     "eslint-plugin-cypress": "^2.13.2"
->>>>>>> 0847ef0 (Novos arquivos de configuração)
   },
   "name": "cypress-boilerplate",
   "version": "1.0.0",
